test/must_fail/bad_prefix.ngjs
#!/usr/bin/env ngspicejs
// Bad cap prefix
// linter: ngspicejs-lint
"use strict";

capacitor('ABC', 1, 0, 100);
